--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "careercraft",
   "main": "expo-router/entry",
-  "version": "1.0.0",
+  "version": "2.40.9",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.15.0",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
@@ -22,6 +23,7 @@
     "expo-image": "~3.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.4",
+    "expo-secure-store": "~15.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -31,17 +33,26 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-worklets": "0.5.1",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.21.0"
+    "react-native-web": "~0.21.0",
+    "react-native-worklets": "0.5.1",
+    "@react-native-community/datetimepicker": "8.4.4",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-sharing": "~14.0.7",
+    "expo-print": "~15.0.7",
+    "expo-file-system": "~19.0.14",
+    "expo-media-library": "~18.1.1",
+    "expo-auth-session": "~7.0.8",
+    "@expo/metro-runtime": "~6.1.2",
+    "expo-updates": "~29.0.10"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "typescript": "~5.9.2",
     "eslint": "^9.25.0",
-    "eslint-config-expo": "~10.0.0"
+    "eslint-config-expo": "~10.0.0",
+    "typescript": "~5.9.2"
   },
   "private": true
 }
