--- a/eas.json
+++ b/eas.json
@@ -9,24 +9,24 @@
       "distribution": "internal",
       "channel": "development",
       "env": {
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aG9wZWZ1bC13aGFsZS0xMS5jbGVyay5hY2NvdW50cy5kZXYk",
-        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBgXHmu3NtDt_wggLA3Q7sTki5eqOiCUpQ"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "$EXPO_PUBLIC_GEMINI_API_KEY"
       }
     },
     "preview": {
       "distribution": "internal",
       "channel": "preview",
       "env": {
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aG9wZWZ1bC13aGFsZS0xMS5jbGVyay5hY2NvdW50cy5kZXYk",
-        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBgXHmu3NtDt_wggLA3Q7sTki5eqOiCUpQ"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "$EXPO_PUBLIC_GEMINI_API_KEY"
       }
     },
     "production": {
       "autoIncrement": true,
       "channel": "production",
       "env": {
-        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aG9wZWZ1bC13aGFsZS0xMS5jbGVyay5hY2NvdW50cy5kZXYk",
-        "EXPO_PUBLIC_GEMINI_API_KEY": "AIzaSyBgXHmu3NtDt_wggLA3Q7sTki5eqOiCUpQ"
+        "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "$EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY",
+        "EXPO_PUBLIC_GEMINI_API_KEY": "$EXPO_PUBLIC_GEMINI_API_KEY"
       }
     }
   },
