--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,41 +12,43 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.15.0",
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "expo": "~54.0.7",
+    "expo-auth-session": "~7.0.8",
     "expo-constants": "~18.0.8",
+    "expo-file-system": "~19.0.14",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.8",
+    "expo-media-library": "~18.1.1",
+    "expo-print": "~15.0.7",
     "expo-router": "~6.0.5",
     "expo-secure-store": "~15.0.7",
+    "expo-sharing": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
+    "expo-updates": "~29.0.10",
     "expo-web-browser": "~15.0.7",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.0",
+    "react-native-responsive-dimensions": "^3.1.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "@react-native-community/datetimepicker": "8.4.4",
-    "expo-linear-gradient": "~15.0.7",
-    "expo-sharing": "~14.0.7",
-    "expo-print": "~15.0.7",
-    "expo-file-system": "~19.0.14",
-    "expo-media-library": "~18.1.1",
-    "expo-auth-session": "~7.0.8",
-    "@expo/metro-runtime": "~6.1.2",
-    "expo-updates": "~29.0.10"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
