--- a/frontend/app.json
+++ b/frontend/app.json
@@ -45,7 +45,8 @@
         }
       ],
       "expo-secure-store",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true,
